--- a/custom.tmpl
+++ b/custom.tmpl
@@ -2,7 +2,7 @@ server {
     listen       80;
     server_name  $host;
     location / {
-        proxy_pass $ip:80;
+        proxy_pass http://$ip;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
